--- a/sub_21.html
+++ b/sub_21.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="ko">
+
 <head>
 	<title>그린매거진</title>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta property="og:title" content="그린매거진">
 	<meta property="og:description" content="그린매거진 웹진을 만나보세요.">
@@ -14,165 +15,197 @@
 	<link rel="stylesheet" type="text/css" href="css/sub.css?ver=202502" />
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="js/script2.js?ver202502"></script>
-<style>
-	:root {
-		--main-color: #985B36;
-		--text-color-small: #C2A489;
-		--text-color-title: #fff;
-		--text-color-title2: #DBCAA5;
-	}
+	<style>
+		:root {
+			--main-color: #985B36;
+			--text-color-small: #C2A489;
+			--text-color-title: #fff;
+			--text-color-title2: #DBCAA5;
+		}
 
-.header-dual .article-header-image figure img {
-	top: auto;
-	bottom: 0;
-}
-.article-header-text h2 {
-	font-family: HallymMjo-Regular;
-	font-size: 5rem;
-}
-.article-header-text h4 {
-	font-size: 3rem;
-	font-family: HallymMjo-Regular;
-}
-.article-text p {
-	margin-bottom: 2rem;
-}
-.article-image figcaption {
-	text-align: right;
-	transform: translateY(-100%);
-}
-.quote-normal:after, .quote-normal:before {
-		display: none;
-}
-.quote-normal {
-	letter-spacing: 0;
-}
-.quote-normal cite {
-	font-size: 1.4rem;
-	font-family: pretendard;
-	display: block;
-	margin-top: 1rem;
-}
-.writer-box {
-	display: flex;
-	gap: 1rem;
-	max-width: 50rem;
-}
-.writer-box figure {
-	width: 8rem;
-	height: 8rem;
-	border-radius: 50%;
-	overflow: hidden;
+		.header-dual .article-header-image figure img {
+			top: auto;
+			bottom: 0;
+		}
 
-}
-.writer-box p {
-	margin: 0 !important;
-	font-size: 1.4rem !important;
-}
-.writer-box-right {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-}
-.old-recipe {
-	margin: 3rem 0 5rem;
-}
-.old-recipe h3 {
-	font-size: 5rem;
-	font-family: serif;
-	color: #E3D1C0;
-}
-.old-recipe ol {
-	counter-reset: custom-counter;
-}
-.old-recipe p {
-	color: #5A6C92;
-	font-family: HallymMjo-Regular;
-}
-.old-recipe ol li {
-	counter-increment: custom-counter;
-	font-size: 1.5rem;
-	line-height: 1.8;
-	font-family: Gyeonggi_Batang_Regular;
-	position: relative;
-	padding-left: 3rem;
-	padding-right: 1rem;
-	text-decoration: underline;
-	text-decoration-thickness: 0.1rem;
-	text-underline-offset: 0.5rem;
-	text-decoration-style: dotted;
-	text-decoration-color: #98807B;
-	margin-bottom: 1.5rem;
-}
-.old-recipe ol li::before {
-	content: counter(custom-counter); /* 숫자 표시 */
-    background-color: black;
-    color: white;
-    font-family: pretendard;
-    font-size: 1rem;
-    width: 2rem;
-    height: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%; /* 원형 모양 */
-    position: absolute;
-    left: 0;
-    top: 0.4rem;
-}
-.old-recipe ol li span {
-	font-family: pretendard;
-}
+		.article-header-text h2 {
+			font-family: HallymMjo-Regular;
+			font-size: 5rem;
+		}
 
-.footnote {
-	margin-top: 5rem;
-	border-top: 1px solid #000;
-	padding-top: 1rem;
-	font-size: 1.3rem;
-}
-.footnote ol {
-	counter-reset: custom-counter;
-	color: var(--main-color);
-}
-.footnote ol li {
-	counter-increment: custom-counter;
-	padding-left: 1.5rem;
-	position: relative;
-}
-.footnote ol li::before {
-	content: counter(custom-counter);
-	font-weight: bold;
-	position: absolute;
-	left: 0;
-}
-sup {
-	color: var(--main-color);
-}
-.footnote ol li {
-	margin-bottom: .8rem;
-	line-height: 1.3;
-}
-@media (max-width:767px) {
-	.writer-box p {
-		font-size: 1.3rem !important;
-	}
-	.writer-box {
-		padding-bottom: 2rem;
-	}
-	.table-big {
-		width: 100vw;
-	}
-	.table-big table tr th:first-child, .table-big table tr td:first-child {
-		width: 10rem;
-		word-break: keep-all;
-	}
-	.article-image figcaption {
-		transform: translateY(-150%) translateX(-2rem);
-	}
-}
+		.article-header-text h4 {
+			font-size: 3rem;
+			font-family: HallymMjo-Regular;
+		}
 
-</style>
+		.article-text p {
+			margin-bottom: 2rem;
+		}
+
+		.article-image figcaption {
+			text-align: right;
+			transform: translateY(-100%);
+		}
+
+		.quote-normal:after,
+		.quote-normal:before {
+			display: none;
+		}
+
+		.quote-normal {
+			letter-spacing: 0;
+		}
+
+		.quote-normal cite {
+			font-size: 1.4rem;
+			font-family: pretendard;
+			display: block;
+			margin-top: 1rem;
+		}
+
+		.writer-box {
+			display: flex;
+			gap: 1rem;
+			max-width: 50rem;
+		}
+
+		.writer-box figure {
+			width: 8rem;
+			height: 8rem;
+			border-radius: 50%;
+			overflow: hidden;
+
+		}
+
+		.writer-box p {
+			margin: 0 !important;
+			font-size: 1.4rem !important;
+		}
+
+		.writer-box-right {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+		}
+
+		.old-recipe {
+			margin: 3rem 0 5rem;
+		}
+
+		.old-recipe h3 {
+			font-size: 5rem;
+			font-family: serif;
+			color: #E3D1C0;
+		}
+
+		.old-recipe ol {
+			counter-reset: custom-counter;
+		}
+
+		.old-recipe p {
+			color: #5A6C92;
+			font-family: HallymMjo-Regular;
+		}
+
+		.old-recipe ol li {
+			counter-increment: custom-counter;
+			font-size: 1.5rem;
+			line-height: 1.8;
+			font-family: Gyeonggi_Batang_Regular;
+			position: relative;
+			padding-left: 3rem;
+			padding-right: 1rem;
+			text-decoration: underline;
+			text-decoration-thickness: 0.1rem;
+			text-underline-offset: 0.5rem;
+			text-decoration-style: dotted;
+			text-decoration-color: #98807B;
+			margin-bottom: 1.5rem;
+		}
+
+		.old-recipe ol li::before {
+			content: counter(custom-counter);
+			/* 숫자 표시 */
+			background-color: black;
+			color: white;
+			font-family: pretendard;
+			font-size: 1rem;
+			width: 2rem;
+			height: 2rem;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			border-radius: 50%;
+			/* 원형 모양 */
+			position: absolute;
+			left: 0;
+			top: 0.4rem;
+		}
+
+		.old-recipe ol li span {
+			font-family: pretendard;
+		}
+
+		.footnote {
+			margin-top: 5rem;
+			border-top: 1px solid #000;
+			padding-top: 1rem;
+			font-size: 1.3rem;
+		}
+
+		.footnote ol {
+			counter-reset: custom-counter;
+			color: var(--main-color);
+		}
+
+		.footnote ol li {
+			counter-increment: custom-counter;
+			padding-left: 1.5rem;
+			position: relative;
+		}
+
+		.footnote ol li::before {
+			content: counter(custom-counter);
+			font-weight: bold;
+			position: absolute;
+			left: 0;
+		}
+
+		sup {
+			color: var(--main-color);
+		}
+
+		.footnote ol li {
+			margin-bottom: .8rem;
+			line-height: 1.3;
+		}
+
+		@media (max-width:767px) {
+			.writer-box p {
+				font-size: 1.3rem !important;
+			}
+
+			.writer-box {
+				padding-bottom: 2rem;
+			}
+
+			.table-big {
+				width: 100vw;
+			}
+
+			.table-big table tr th:first-child,
+			.table-big table tr td:first-child {
+				width: 10rem;
+				word-break: keep-all;
+			}
+
+			.article-image figcaption {
+				transform: translateY(-150%) translateX(-2rem);
+			}
+		}
+	</style>
 </head>
+
 <body>
 	<header class="header" id="header"></header>
 	<main>
@@ -181,7 +214,7 @@ sup {
 				<div class="article-header-container">
 					<div class="article-header-text">
 						<span>고서 탐구</span>
-						<h4>조선의 조리서</h4>
+						<h4>조선시대 종합조리서</h4>
 						<h2>음식디미방</h2>
 						<!-- <p>장마도 한여름도 눈앞이다. 찌는 더위 아래 너나 할 것 없이 지치게 마련이다. 그래도 한반도를 살아온 사람들, 어떻게든 장마도 무더위도 이겨내고 살아왔다. 어떻게든 건강 지키며 살자고 건강에 잇닿은 담론을 만들어 왔다. 그 대표적인 담론 그리고 행동의 방향을 제시하는 말이 ‘식치(食治)’ 또는 ‘식료(食療)’이다. ‘먹을 식(食)’에 ‘다스릴 치(治)’ 또는 ‘병 고칠 료(療)’가 붙었다. 단박에 의미를 떠올리실 수 있으리라.</p> -->
 						<div class="article-meta">
@@ -196,39 +229,52 @@ sup {
 								</figure>
 							</div>
 							<div class="writer-box-right">
-								<p>대학에서 고전문학을 공부했다. 고전문학 작품 번역과 해제 및 음식문헌 읽기와 정리에도 힘쓰고 있다. 현재 경향신문 기명 칼럼 〈고영의 문헌 속 밥상〉을 연재하고 있다.</p>
+								<p>대학에서 고전문학을 공부했다. 고전문학 작품 번역과 해제 및 음식문헌 읽기와 정리에도 힘쓰고 있다. 현재 경향신문 기명 칼럼 〈고영의 문헌 속 밥상〉을
+									연재하고 있다.</p>
 							</div>
 						</div>
 					</div>
 					<div class="article-header-image">
 						<figure>
-							<img src="contents/sub_21_top.jpg" />							
+							<img src="contents/sub_21_top.jpg" />
 						</figure>
 					</div>
 				</div>
 			</div>
 		</section>
 		<section class="article-body">
-			<div class="article-body-wrap">				
+			<div class="article-body-wrap">
 				<div class="article-text">
 					<div class="article-image big-image">
 						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_21_image_1.jpg">
 								<figcaption>
-									자료: 한국학중앙연구원
+									자료: 경북대학교 중앙도서관
 								</figcaption>
 							</figure>
 						</div>
 					</div>
 					<div class="quote-normal">
-						“새색시가 시집온 지 사흘 만에 부엌에 가(三日入廚下)/손 씻고 국 끓이고는(洗手作羹湯)/아직 시어미의 식성을 모르니(未諳姑食性)/먼저 시집의 젊은 아낙에게 맛보게 하네(先遣少婦嘗)”
+						“이 책을 이리 눈 어두운데 간신히 썼으니 이 뜻을 알아 이대로 시행하고, 딸자식들은 각각 베껴 가되, 이 책을 가져갈 생각일랑 마음도 먹지 말며, 부디 상하지 않게
+						간수하여 쉽게 떨어지게 하지 말라.”
 					</div>
 					<p>
-						<음식디미방>은 지난 호에 소개한 <수운잡방>과 함께 유네스코 세계기록유산 아시아·태평양 지역 목록 등재 한국 후보에 오른 조선의 조리서이다. 책을 열면, 본문을 시작하기에 앞서, 앞표지의 뒷면에 위와 같은 시구가 보인다. ‘그래, 꽤 오래 여성 곧 주부이고 주부 곧 여성이었지. 새색시에게 세상이 바라던 바가 있었지’ 하며 살짝 웃음이 난다. 지난 시대가 새삼스레 다가온다. 지난 호에 쓴 대로 <수운잡방>은 조선 전기 경북 양반 남성이 한문으로 써 남긴 기록이다. 이에 견주어 <음식디미방>은 조선 후기 경북 양반 여성이 한글로 써 남긴 기록이다. 살림을 알뜰살뜰 꾸려가는 집안이라면, 가장은 가장대로 조리와 음식을 내 일로 여겼고 주부는 주부대로 조리와 음식을 내 일로 여겼음을 되새긴다.
+						지난 호에 이어 <음식디미방>을 펼친다. 위의 문장은 이 책 맨 마지막에 붙어 있는 한마디이다. 글쓴이 장계향(1598~1680)은 일평생 돌본 식료품과 조리와 음식에
+							잇닿은 바를 대물려 가꾸고 간직할 일로 여겼다. 장계향에게 음식은 소중한 내 일이었다. 그만큼 대대로 이어지길 바랐다. 그래서 원본은 원본대로 한 집안 또는 종가에
+							잘 남고, 집안을 떠날 사람들은 필사본 또는 부본(副本)<sup>1)</sup> 을 만들어 실제로 잘 쓰고, 또 잘 간수하기를 바랐다. 과연 장계향의 바람대로 된 셈
+							아닌가. 독자
+							여러분도 저도 이렇게 오늘날 <음식디미방>을 들여다보고 있다.
 					</p>
 					<p>
-						이 책을 쓰고 남긴 장계향(張桂香, 1598~1680)은 임진왜란이 끝나가던 1598년 11월 안동시 서후면 금계리 춘파마을에서 아버지 장흥효(張興孝, 1564~1633)와 어머니 안동 권씨 사이에 외동딸로 태어났다. 아버지 장흥효는 대학자 김성일(金誠一, 1538~1593)의 제자인 데다 명망이 높아 집에는 제자와 방문객의 발길이 끊이지 않았다. 그 덕분이었을 테다. 장계향은 일찌감치 한문을 익혔고, 시문을 지었고, 글씨를 잘 썼다.<sup>1)</sup> <음식디미방>에 보이는 어휘와 문장과 짜임새가 그 재주와 교양의 증거이다. 친정에서 평온하게 살던 장계향은 1616년 열아홉 나이에 출가한다. 첫 부인과 사별한 재령 이씨 이시명(李時明, 1590~1674)과 혼인한 것이다. 장계향은 친정을 떠나 시집이 있는 영해(寧海)<sup>2)</sup>로 가 살다, 1631년 경북 영양군 석보면 원리리 두들마을로 분가해 나간다. 그 뒤 두들마을과 시댁이 있는 영해를 오가며 살다, 1640년 이시명이 두들마을에 집을 짓는<sup>3)</sup> 한편 석계초당(石溪草堂)을 세워 후학 양성에 힘쓰면서 제2의 두들마을살이를 시작한다. 1953년에는 두메산골인 영양의 수비(首比)<sup>4)</sup>로 한 번 더 삶의 터전을 옮겼고, 1672년 다시 안동군 풍산읍 수곡리로 이사한다. 1674년 이시명이 수곡리에서 세상을 뜨자 장계향은 큰아들 이상일(李尙逸)<sup>5)</sup>이 살고 있던 영해를 거쳐 다시 두들마을로 돌아왔다가, 1680년 생애를 마감하였다.
+						<음식디미방>은 직접 살림을 산 여성, 대가족 한 집안의 식료품을 몸소 관리하며 살아온 여성의 경험이 녹아 있는 조리서이다. 일상생활의 먹을거리와 한 철의 먹을거리와 의례
+							때문에 갖추어야 할 음식을 아울러 매만지며 살아온 사람이 남긴 기록이다. 조리의 구체적인 과정을 몸소 경험한 사람이 썼기에 어떤 재료를 얼마만큼 쓰고, 어떤 순서로
+							손질하고 가열하며, 식료품과 음식의 분량을 얼마나 가늠할 수 있을지, 조리와 음식의 어느 부분에 유의해야 할지, 계절에 따른 재료를 어떻게 갈무리하고 저장해야 하는지
+							등등이 구체적으로 쓰일 수 있었다. 어떻게 차리면 좋다는 조언도 보인다. 오늘날의 말로 다시 표현하면, <음식디미방>을 일러 ‘재료의 전처리부터 차림과 저장·유통까지
+								아우른 종합 조리서 겸 본격 요리서’라고 할 만하다. 체계적인 서술과 방대한 항목도 지나칠 수 없다. 그 구성은 ‘면병류’, ‘어육류’, ‘주국방문’의 세
+								부분으로 이루어져 있다. ‘면병류’에는 국수· 만두·떡·과자가 망라되어 있다. ‘어육류’에는 고기·생선·갑각류·달걀 및 오리알·채소를 재료로 하는 음식이 주로
+								나온다. 여기에 다시 과자와 떡과 음료가 끼여 있고 음식 보관법이 여덟 항목 실려 있다. ‘주국방문’은 술과 누룩과 식초를 망라한 장이다. 술과 누룩에 관한
+								항목만 51항에 달한다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -238,14 +284,46 @@ sup {
 						</div>
 					</div>
 					<p>
-						장계향은 점잖은 집안 출신으로 곤궁할 것 없는 집안으로 출가했다. 하지만 장계향의 시대는 광해군과 인조에 걸친 혼란기였고, 정묘호란과 병자호란의 시대였고, 명청교체의 격변기이기도 했다. 굳이 살펴본 이사는 부부가 집안을 지키고, 집안을 다음 대에 이어가기 위한 몸부림이기도 했다. 예컨대 부부는 두들마을로 살림을 날 때 구황을 염두에 두고 참나무를 어마어마하게 심었다. 이곳에서는 여전히 도토리가 잔뜩 난다. 이때의 실제 경영과 재산 관리는 장계향의 몫이었던 듯하다. 양반다운 체면을 차리기 위한 가정경영 일체가 장계향에게 또 다른 의무이자 부담이었으리라. 여기다 음식은 그저그런 집안일이 아니었다. 가문의 품격과 의례의 상징이었다. 더구나 장계향은 큰 고을 영해의 종가(宗家)<sup>6)</sup>로 시집간 처지였다. 제사와 손님맞이, 문중 간의 교류 등 모든 행사의 중심에 종가가 있다. 종가의 살림을 맡은 여성에게, 격식을 갖춘 정갈한 음식과 정성을 다한 장이며 술은 가문의 명예와 직결되었다. 음식의 조화와 균형 그리고 완성도는 맛과 차림으로 드러나게 마련이다. 장계향은 음식에 잇닿은 내 경험과 가풍을 후손에게 전하고 싶었을 테다. <음식디미방> 집필의 동력을 이렇게 짐작해 본다.
+						또한 책의 곳곳에 ‘맛질방문’이라는 말이 등장한다. 맛질은 오늘날의 경상북도 예천로 추정한다. 장계향은 17세기에 실제로 안동·영해·영양·예천 등 경상북도 북부 지역에서
+						나고 자라고 생애를 마친 인물이다. 내 삶의 영역에서 충분히 겪은 음식 문화를 내 손으로 구체적으로 쓰되, 짜임새 있게 또 충분히 기록하고 전하려 애쓴 결과가 또한
+						<음식디미방>이다.
 					</p>
 					<p>
-						이 책의 표지에 쓰인 제목은 한자로 쓴 ‘閨壼是議方(규곤시의방)’이다. 그러나 본문 첫 머리에는 그 제목이 순한글로 ‘음식디미방’이라 적혀 있다. 한 책에 두 제목이라니 어찌 된 노릇일까? 뜻부터 풀어보자. ‘규곤(閨壼)’은 여성 공간인 ‘안방’과 ‘안뜰’을 뜻한다. ‘시의방(是議方)’은 ‘올바른 방문’이라는 뜻이다. ‘음식디미방’은 한자로 쓰이지는 않았지만, 언어학에 힘입어 ‘飮食知味方(음식디미방)’으로 새길 수 있다. ‘지(知)’의 고음이 ‘디’이다. 곧 ‘좋은 음식 맛을 내는 방문’으로 풀이할 수 있다.,<sup>7)</sup> 연구자들은 지금 경북대학교 도서관이 소장하고 있는 이 책의 표지와 장정은 후손이 마련한 것이고, ‘규곤시의방’이라는 제목도 격식을 갖추기 위해 한문 감각을 따라 나중에 붙인 것으로 설명한다. 그런데 지금 전해오는 책의 본문이 시작하는 면에서, 본문 시작과 함께 보이는 제목은 ‘음식디미방’이다. 그러니 장계향이 붙인 제목은 ‘음식디미방’이 아닐까 짐작한다. 오늘날 연구자들은 이 책의 제 이름은 ‘음식디미방’으로 잡고, 별칭으로 ‘규곤시의방’을 부기한다.
+						살펴보면 재미난 점이 하나 있다. 이 책에는 죽과 밥 어느 하나도 독립한 항목에 올라가지 않았다. 왜 그랬을까? 늘 하기에, 누구나 매일 손댈 만하기에 굳이 시시콜콜 말할
+						필요 없는 조리법은 다루지 않았을 가능성이 높다. 그보다는 별미, 한 해를 두고 몇 번 하지 못할 특별한 음식(또는 저장법), 집안의 법수를 뽐낼 만한 음식, 한 번
+						실패하면 큰 낭패를 보게 되는 술과 식초 같은 음식에 보다 집중했을 가능성이 높다. 별미의 의미도 오늘날과는 또 다르다. 곡물의 가루를 내고, 먹을 만한 깨끗한 가루를 받는
+						과정 자체가 보통 일이 아니었던 시대의 국수와 만두를 살펴보자. <음식디미방>을 열자마자 보이는 ‘면병류’의 ‘면’ 항목이 이렇다.
 					</p>
 					<p>
-						이 책에는 모두 146가지 조리법 및 음식이 실려 있다. 쓰인 대로 따라가면 크게 세 부류가 된다. 곧 면병류(麵餠類, 국수 및 떡 종류) 18항목, 어육류(魚肉類, 생선 및 고기 재료 음식) 74항목, 주국방문(酒麴方文, 술 및 초 종류) 54항목 등이다. 다만 어육류에 여러 가지 다른 음식 30항목이 섞여 있고, 주국방문에서 식초에 관한 3항목에 그친다. 필사 과정에서 또는 책을 묶는 과정에서 혼란이 있었던 듯하다. 아무려나 펼쳐보면 볼수록 당시 안동, 영해, 영양 지역의 밥상이 얼마나 다채로웠는지 잘 드러난다. 또는 고려 말부터 전해 내려오는 ‘상화(霜花)’의 조리법도 실려 있다. 상화는 발효 반죽에 의한 떡으로 고려가요 <쌍화점(雙花店)>의 그 ‘쌍화’이다. <쌍화점>은 이렇게 노래한다. ‘쌍화 사러 갔는데 회회아비[回回아비, 이방인 점주]가 내 손목을 쥐더라.’ 곧 서역에서 들어온, 밀가루 반죽을 부풀려 폭신한 질감의 떡 또는 만두피를 만드는 기술이다. 여기다 다양한 양조법, 국수와 만두 조리법, 떡 및 과자 조리법, 고추 재배가 확산되기 이전 초피와 겨자 등으로 향과 맛을 내는 방식, 온갖 반찬 조리법, 채소 저장법 등이 섬세한 표현과 멋진 문장으로 구현되어 있다. 요컨대 이 책은 행간까지 깊이 읽어낸다면 ‘17세기 조선의 미식 문화 사전’으로 다시 읽을 수 있는 소중한 기록이다. 요리사들에게도 상상력의 원천이 될 만하다. 그 구체적인 내용은 다음 연재분에서 다루도록 하겠다. 
-						<i class="icon_last"></i>
+						“겉메밀을 씻어 많이 말리지 말고 알맞게 말려 쌀(메밀쌀)을 좋게 하여 찧을 때 미리 물을 뿜어 축축이 하여 두고, 녹두의 거피한 알을 좋게 씻어 건져 물 빼거든 메밀쌀 닷
+						되에 물에 불린 녹두 한 복자<sup>2)</sup> 씩 섞어 찧은 뒤 방아를 가만가만 찧어 겉가루는 쳐 버리고, 키로 퍼 버리고, 키 끝에 흰 쌀이 나거든 그를 모아 다시
+						하면 가루가 가장 희거든, 면 말 때 더운 물에 눅게(묽게) 말아 누르면(국수틀에 누르면) 빛이 희고 좋은 면이 되느니라(이하 생략).”
+					</p>
+					<p>
+						먹기만 할 줄 아는 사람한테는 아무것도 아닐 테지만, 내 손으로 식료품을 만지며 내 눈으로 물성의 변화를 지켜본 사람이라면 감탄할 만한 구체성이 여실하다. 장계향은 분량을
+						가늠하며 조리의 과정을 썼다. 방아질에서 키질에 이르는 세부도 중요하다. 공장 제분 이전, 오로지 사람의 손으로 감당하던 자가 제분의 풍경이 이러했다. ‘맛있다’로 다가
+						아닌 면모가 이러했다. 여느 자원이 하필 식료품이 될 때, 식료품이 드디어 음식이 될 때 필요한 과정과 기본기술이 훈민정음을 익힌 여성을 통해 이토록 생생하게 기록되었다.
+					</p>
+					<p>
+						‘만두법’도 재미나다. 17세기 조선에서 밀가루는 정말 귀했고, 국수고 만두고 메밀가루가 밀가루에 앞섰다. 만두는 반죽을 전제로 한다. 반죽 앞에는 깨끗하고 고운 가루가
+						있어야 한다. ‘만두법’ 은 “메밀가루 장만하기를 마치 깨끗한 면가루 같이(밀가루의 예와 같이) 가는 모시나 깁<sup>3)</sup> 에 쳐서”로 시작한다. 빻는 것으로
+						끝이 아니다. 만두피를 밀 만큼의 가루를 받으려면 다시 모시나 깁에 한 번 더 치는 수고를 생략할 수 없다. 그러고도 다시 그 가루로 풀을 쑤어 반죽을 쳐, 그 반죽을
+						개암열매 크기로 떼 내어 만두를 빚었다. 만두의 소는 꿩고기의 연한 살을 다져 기름장에 볶아 잣·후추·초피가루로 양념해 마련한다. 쪄 낸 만두 옆에는 생강즙을 탄 초간장이
+						있어야 한다. 꿩고기 대신 소고기도 좋은 소재이다. 또는 채소만 가지고 소를 만든다면 삶은 무, 표고, 송이, 석이를 다져 참기름을 치고, 잣을 빻아 간장물에 볶아 넣어도
+						좋다. 장계향은
+						밀가루를 낼 수 있다면 밀가루도 좋다고 덧붙였다. 초간장에 생강 대신 마늘을 쓸 수도 있지만, 향이 너무 강하니 생강만 못하다는 조언은 마지막에 살짝 덧붙였다. 읽다 보면
+						살짝 웃음이 난다. 솜씨 좋은 큰이모 또는 자취 이력이 길어 자연스레 반요리사가 된 선배한테 시시콜콜 음식 하는 법을 배우는 느낌이 나니 말이다. 떡을 살펴보아도 그렇다.
+						‘석이편법’ 곧 ‘석이시루떡 찌는 법’ 항목을 읽어보자.
+					</p>
+					<p>
+						“백미가 한 말이면 찹쌀 두 되를 한 데 담갔다가 가루 만들고 석이 한 말을 데운 물에 깨끗하게 씻어 다듬어 썰어 섞어 넣어서 팥시루편(팥시루떡)같이 (시루에) 안치되
+						백자(栢子, 잣)를 으깨어 (켜켜이) 놓아 찌라. 이 편(떡)이 가장한(최고의) 별미니라.”
+					</p>
+					<p>
+						손님 맞을 줄 알고, 절기와 명절에 맞는 음식을 마련할 줄 알고, 봉제사 제대로 지내는 집안에서 태어나, 못잖은 집안에 시집가, 일평생 살림과 음식을 돌보며 살아온 장계향의
+						목소리가 들리는 듯하다. ‘그래, 석이편, 잘 안쳐 찌면 최고지. 이런 별미 먹어 봤니? 우리 집안 사람들아, 고향에서 이 음식 지키고 살자. 어디로 떠나 가든 이런 멋진
+						떡 잊지 말자!’ 하는 말소리가 들리는 듯하다. 음식마다 이렇다. 항목마다 이렇다. 읽을수록 흐뭇하고 정다운 음식문헌이 또한 <음식디미방>이다.
+							<i class="icon_last"></i>
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -257,32 +335,21 @@ sup {
 					<div class="footnote">
 						<ol>
 							<li>
-								장계향의 셋째 아들 이현일(李玄逸, 1627~1704)은 어머니의 삶을 정리한 글 <선비증정부인장씨행실기(先妣贈貞夫 人張氏行實記)>를 남겼다. 이를 통해 장계향의 공부와 교양의 세목을 확인할 수 있다. 위 글에 따르면 장계향은 당시로서는 자신의 재주를 쓸 곳이 없음을 또한 일찌감치 깨달았다
+								원본과 동일한 내용의 문서를 부본이라고 한다. 원본의 훼손에 대비하여 예비로 보관하거나 실제로 사용하기 위해 만든다.
 							</li>
 							<li>
-								정확히는 오늘날의 영덕군 창수면 인량리 인량마을(별칭 ‘나랏골’)이다. 조선 시대에는 영해가 영덕보다 훨씬 큰 고을이었다.
+								기름을 따르거나 기름의 분량을 가늠할 때 쓰는 작은 그릇.
 							</li>
 							<li>
-								이 집이 경북 영양군 석보면 두들마을길 77(원리리)에 자리한 석계고택(石溪古宅)이다. 여기서 부부가 실제로 오래 살았다. 장계향은 여기서 늘그막을 보냈고, <음식디미방>을 썼고, 임종을 맞았다.
-							</li>
-							<li>
-								오늘날의 경북 영양군 영양읍 수비면.
-							</li>
-							<li>
-								이상일의 생모는 광산 김씨이다. 이시명은 광산 김씨 사이에서 1남 1녀를, 장계향과는 6남 2녀를 두었다. 장계향은 7남 3녀를 모두 잘 키웠다. 남매 모두 서로 화목하게 지냈던 것으로 보인다.
-							</li>
-							<li>
-								원래는 적장자로만 이어져 집안의 부계의 정통성을 쥔 큰집을 일컫는다. 그 가운데서도 국가와 세상 사람들로부터 인정받고 추앙받을 때 종가로 인식된다. 종가에는 종가다운 전승과 의례가 있다.
-							</li>
-							<li>
-								백두현, <음식디미방[閨壼是議方]의 내용과 구성에 대한 연구>, <<영남학>>(창간호) 2001. 
+								명주실로 거칠게 짠 비단.
 							</li>
 						</ol>
 					</div>
 				</div>
 			</div>
-		</section>	
+		</section>
 	</main>
 	<footer class="footer" id="footer"></footer>
 </body>
+
 </html>
